# eigen-zeth

./: .gitignore  Cargo.toml  L2-import-vk.sh  L2CL.sh  L2VC.sh  L2run.sh  L2validator.sh  Makefile  README.md  build.rs
.github/workflows/: ci.yml
configs/: custom_node_config.toml  database.toml  settlement.toml
contracts/: EigenZkVM.json  EigenZkvm.json
lib/: Cargo.toml
lib/src/: alloy2reth.rs  alloy2revm.rs  consts.rs  lib.rs  mem_db.rs  utils.rs
lib/src/builder/: finalize.rs  initialize.rs  mod.rs
lib/src/builder/execute/: ethereum.rs  mod.rs
lib/src/host/: mod.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs
node/src/operations/: build.rs
primitives/src/: batch.rs
primitives/src/transactions/: mod.rs
primitives/src/trie/: mpt.rs
program/: Cargo.toml
program/src/: main.rs
proof/: proof.json  public_input.json
proto/prover/v1/: prover.proto
scripts/: build-and-install-lighthouse.sh  build-eth2-validator-tools.sh  clean-l1.sh  clean-l2.sh  generate-eth2-validator-keys.sh  generate-genesis-data.sh  init-eigen-zeth-genesis.sh  init-l1.sh  init-l2.sh  launch-pos-eigen-zeth-node.sh  start-l1.sh  start-l2.sh  stop-l1.sh  stop-l2.sh
src/: aggregator.rs  cli.rs  env.rs  main.rs  operator.rs  prover.rs  rpc.rs  service.rs
src/batch_proposer/: mod.rs
src/commands/: chain_info.rs  config.rs  init.rs  mod.rs  reth.rs  run.rs
src/config/: env.rs  mod.rs
src/custom_reth/: eigen.rs  mod.rs
src/da/: mod.rs
src/db/: data_availability_db.rs  mod.rs
src/db/db_utils/: libmdbx.rs  memory_kvdb.rs  mod.rs
src/db/lfs/: libmdbx.rs  mem.rs  mod.rs
src/prover/: mod.rs  provider.rs
src/rpc/: eigen.rs  mod.rs
src/settlement/: mod.rs  worker.rs
src/settlement/custom/: methods.rs  mod.rs
src/settlement/ethereum/: mod.rs
src/settlement/ethereum/interfaces/: bridge.rs  eigen_bridge.rs  eigen_global_exit_root.rs  global_exit_root.rs  global_exit_root_l2.rs  mod.rs  zeth_global_exit_root.rs  zkvm.rs
src/settlement/http/: mod.rs
staking_deposit-cli-fdab65d-linux-amd64/validator_keys/: deposit_data-1720857629.json  keystore-m_12381_3600_0_0_0-1720857602.json  keystore-m_12381_3600_10_0_0-1720857605.json  keystore-m_12381_3600_11_0_0-1720857606.json  keystore-m_12381_3600_12_0_0-1720857606.json  keystore-m_12381_3600_13_0_0-1720857606.json  keystore-m_12381_3600_14_0_0-1720857606.json  keystore-m_12381_3600_15_0_0-1720857607.json  keystore-m_12381_3600_16_0_0-1720857607.json  keystore-m_12381_3600_17_0_0-1720857607.json  keystore-m_12381_3600_18_0_0-1720857608.json  keystore-m_12381_3600_19_0_0-1720857608.json  keystore-m_12381_3600_1_0_0-1720857603.json  keystore-m_12381_3600_20_0_0-1720857608.json  keystore-m_12381_3600_21_0_0-1720857609.json  keystore-m_12381_3600_22_0_0-1720857609.json  keystore-m_12381_3600_23_0_0-1720857609.json  keystore-m_12381_3600_24_0_0-1720857609.json  keystore-m_12381_3600_25_0_0-1720857610.json  keystore-m_12381_3600_26_0_0-1720857610.json  keystore-m_12381_3600_27_0_0-1720857610.json  keystore-m_12381_3600_28_0_0-1720857611.json  keystore-m_12381_3600_29_0_0-1720857611.json  keystore-m_12381_3600_2_0_0-1720857603.json  keystore-m_12381_3600_30_0_0-1720857611.json  keystore-m_12381_3600_31_0_0-1720857611.json  keystore-m_12381_3600_32_0_0-1720857612.json  keystore-m_12381_3600_33_0_0-1720857612.json  keystore-m_12381_3600_34_0_0-1720857612.json  keystore-m_12381_3600_35_0_0-1720857613.json  keystore-m_12381_3600_36_0_0-1720857613.json  keystore-m_12381_3600_37_0_0-1720857613.json  keystore-m_12381_3600_38_0_0-1720857614.json  keystore-m_12381_3600_39_0_0-1720857614.json  keystore-m_12381_3600_3_0_0-1720857603.json  keystore-m_12381_3600_40_0_0-1720857614.json  keystore-m_12381_3600_41_0_0-1720857614.json  keystore-m_12381_3600_42_0_0-1720857615.json  keystore-m_12381_3600_43_0_0-1720857615.json  keystore-m_12381_3600_44_0_0-1720857615.json  (+25 more)
testdata/: chain.json  docker-compose.yml  init-geth.sh  init.sh  reth.sh  start-geth.sh
testdata/account1.keystore/: 0x540ea708597d8e46CB33BE43139452d8c9583686
testdata/account2.keystore/: 0x6831Fb06762332dCa543C0F2b5795692d896E3D4
testdata/consensus/: config.yml  genesis.ssz
testdata/execution/: genesis.json
testdata/layer1/: chain.json
testdata/layer1/account1.keystore/: 0x0B89A9229940747EAc5918027d3c76968631F304
testdata/layer1/account2.keystore/: 0xF8259389fF5c18034bDa9C136269D79Bd8ab2BD6
testdata/layer2/poc/: chain.json
testdata/layer2/pos/: values.env
testdata/layer2/pos/el-cl-genesis-data/jwt/: jwtsecret
testdata/layer2/pos/el-cl-genesis-data/metadata/: besu.json  (+7 more)
testdata/layer2/pos/validator-keys/: pubkeys.json
testdata_bac/el-cl-genesis-data/jwt/: jwtsecret
testdata_bac/el-cl-genesis-data/metadata/: besu.json  chainspec.json  config.yaml  deposit_contract_block_hash.txt  genesis.json  genesis.ssz
testdata_bac/layer2/: lighthouse-genesis.toml  transform.sh
testdata_bac/layer2/account3.keystore/: 0xE25583099BA105D9ec0A67f5Ae86D90e50036425
testdata_bac/secrets/: jwt.hex
testdata_bac/validator-keys/keys/: .secp-sk  api-token.txt  slashing_protection.sqlite  validator_definitions.yml  validator_key_cache.json
testdata_bac/validator-keys/keys/0x81ea9f74ef7d935b807474e38954ae3934856219a23e074954b2e860c5a3c400f9aedb42cd27cb4ceb697ca36d1e58cb/: voting-keystore.json
testdata_bac/validator-keys/keys/0x84d08d58c31bcd3cddf93e13d6f50203897384afa34644bff1135efe8e01c81c6a91ca6c234bb1e51ca32e41b828aaf9/: voting-keystore.json
testdata_bac/validator-keys/keys/0x8c0d15baa72bfcd317e9b9402ca9bb6e7ae1db35ffce7faccae0bd19b3c8e5de7d5524aef0377770b3a90626627a9304/: voting-keystore.json
testdata_bac/validator-keys/keys/0x8d028a021c5c31a1aa1e18eda74cfaf0fba1c454c17c2e0fc730dd07a19d0c77f7a905d54017292f3e800ca06b6977cd/: voting-keystore.json
testdata_bac/validator-keys/keys/0x8d46e9aa0c1986056e407efc7013b7f271027d3c98ce96667faa98074ab0588a61681faf78644c11819a459a95689dab/: voting-keystore.json
testdata_bac/validator-keys/keys/0x9763dde1b8028136a3ffd6dafd1f450e2cafb2819c7fa901f7c6e9cde8f2897ee7e9a45da6947fde1ad0d3836188eab5/: voting-keystore.json
(+84 files in other folders)
